--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "input": "^1.0.1",
     "telegram": "^2.26.22"
   }
